gcc/testsuite/g++.dg/parse/template9.C
template <typename T> 
void f() {
  g(); // { dg-error "" }
  h(3); // { dg-error "" }
}
